[package]
name = "b"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.1"
tokio = { version = "1.43.0", features = ["full"] }
bevy_renet = "1.0.0"
renet = "1.0.0"
serde = "1.0"
serde_json = "1.0.135"
bincode = "1.3"
rand = "0.8.5"
iyes_perf_ui = "0.3.0"
tokio-tungstenite = "0.26.1"
tungstenite = "0.26"
futures = "0.3.31"
futures-util = "0.3"
uuid = "1.11.1"
local-ip-address = "0.6.3"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
